Added CSS files for 1.8.2

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 &lt;html&gt;
   &lt;head&gt;
     &lt;link rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-VERSION.min.css"/&gt;
+      href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-1.8.2.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -212,7 +212,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">GitHub</a></small></li>
-            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-VERSION.min.css">Download</a></small></li>
+            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-1.8.2.min.css">Download</a></small></li>
             <li><small><a href="https://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
@@ -234,7 +234,7 @@
         </nav>
         <nav>
           <ul>
-            <li>VERSION</li>
+            <li>1.8.2</li>
           </ul>
         </nav>
       </footer>
