--- a/index.html
+++ b/index.html
@@ -1,27 +1,8 @@
-<!--
- * The MIT License (MIT)
- *
- * Copyright (c) 2015-2024 Yegor Bugayenko
- *
- * Permission is hereby granted, free of charge, to any person obtaining a copy
- * of this software and associated documentation files (the "Software"), to deal
- * in the Software without restriction, including without limitation the rights
- * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
- * copies of the Software, and to permit persons to whom the Software is
- * furnished to do so, subject to the following conditions:
- *
- * The above copyright notice and this permission notice shall be included
- * in all copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
- -->
 <!DOCTYPE html>
+<!--
+ * SPDX-FileCopyrightText: Copyright (c) 2015-2025 Yegor Bugayenko
+ * SPDX-License-Identifier: MIT
+ -->
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
@@ -37,7 +18,7 @@
       <header>
         <nav>
           <ul>
-            <li><code>1.8.1</code></li>
+            <li><img src="./tacit_logo.png" alt="tacit logo" style="max-height: 100px;"/></li>
           </ul>
         </nav>
         <nav>
@@ -50,9 +31,6 @@
         </nav>
       </header>
       <article>
-        <figure>
-          <img src="./tacit_logo.png" alt="tacit logo" style="max-height: 100px;"/>
-        </figure>
         <p>
           <strong>Tacit</strong> is a CSS framework for <em>dummies</em>, who want their
           web services to look attractive but have almost zero
@@ -63,7 +41,8 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-1.8.1.min.css"/&gt;
+    &lt;link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-1.8.2.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -191,13 +170,13 @@
           <dt>Cherry</dt>
           <dd>A red fruit that is hard to peel.</dd>
         </dl>
-       
+
        <details>
         <summary>Who was Audubon?</summary>
-        John James Audubon was a French-American self-trained artist, naturalist, and ornithologist. 
+        John James Audubon was a French-American self-trained artist, naturalist, and ornithologist.
         His combined interests in art and ornithology turned into a plan to make a complete pictorial record of all the bird species of North America.
-       </details>  
-       
+       </details>
+
         <h2>Blockquote</h2>
         <blockquote>
           Use this to emphasize a quote
@@ -226,14 +205,14 @@
         <nav>
           <ul>
             <li>
-              <small>Made by <a href="https://www.yegor256.com">@yegor256</a>, 2015-2024</small>
+              <small>Made by <a href="https://www.yegor256.com">@yegor256</a>, 2015-2025</small>
             </li>
           </ul>
         </nav>
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">GitHub</a></small></li>
-            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-1.8.1.min.css">Download</a></small></li>
+            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-1.8.2.min.css">Download</a></small></li>
             <li><small><a href="https://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
@@ -251,6 +230,11 @@
                 alt="Valid CSS!" />
               </a>
             </li>
+          </ul>
+        </nav>
+        <nav>
+          <ul>
+            <li>1.8.2</li>
           </ul>
         </nav>
       </footer>
