--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <p>Sometimes you want to let people know they should press a keyboard command like <kbd>ctrl + l</kbd>.</p>
         <h2>Images</h2>
         <figure>
-          <img src="https://via.placeholder.com/900x500" alt="placeholder image 900 pixels wide by 500 pixels tall"/>
+          <img src="https://placehold.co/900x500" alt="placeholder image 900 pixels wide by 500 pixels tall"/>
           <figcaption>A photo placeholder text</figcaption>
         </figure>
         <h2>Work in progress</h2>
