--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 &lt;html&gt;
   &lt;head&gt;
     &lt;link rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-1.9.0.min.css"/&gt;
+      href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-1.9.1.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -191,7 +191,7 @@
         <p>Sometimes you want to let people know they should press a keyboard command like <kbd>ctrl + l</kbd>.</p>
         <h2>Images</h2>
         <figure>
-          <img src="https://via.placeholder.com/900x500" alt="placeholder image 900 pixels wide by 500 pixels tall"/>
+          <img src="https://placehold.co/900x500" alt="placeholder image 900 pixels wide by 500 pixels tall"/>
           <figcaption>A photo placeholder text</figcaption>
         </figure>
         <h2>Work in progress</h2>
@@ -212,7 +212,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">GitHub</a></small></li>
-            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-1.9.0.min.css">Download</a></small></li>
+            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-1.9.1.min.css">Download</a></small></li>
             <li><small><a href="https://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
@@ -234,7 +234,7 @@
         </nav>
         <nav>
           <ul>
-            <li>1.9.0</li>
+            <li>1.9.1</li>
           </ul>
         </nav>
       </footer>
