#351: Update gitignore, index.html, package.json, _functions.scss.

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
               <th>Make</th>
               <th>Price</th>
               <th>Year</th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
@@ -116,11 +117,13 @@
               <td>BMW X6</td>
               <td>$75,000</td>
               <td>2013</td>
+              <td>The first generation (E71) was released for sale in April 2008 for the 2008 model year, while the second-generation X6 (F16) was launched at the Paris Motor Show in 2014.</td>
             </tr>
             <tr>
               <td>Mercedes-Benz E350</td>
               <td>$52,700</td>
               <td>2014</td>
+              <td>In November 2020, the W213 E-Class was awarded the 2021 Motor Trend Car of the Year award, a first for Mercedes-Benz.</td>
             </tr>
           </tbody>
         </table>
