#351: Add responsive styling for table columns.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
           A simple table would look like this:
         </p>
         <table>
+          <colgroup>
+            <col style="width: 12em;"/>
+            <col style="width: 6em;"/>
+            <col style="width: 5em;"/>
+            <col/>
+          </colgroup>
           <thead>
             <tr>
               <th>Make</th>
