--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 &lt;html&gt;
   &lt;head&gt;
     &lt;link rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-1.9.1.min.css"/&gt;
+      href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-1.9.2.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -104,11 +104,18 @@
           A simple table would look like this:
         </p>
         <table>
+          <colgroup>
+            <col style="width: 12em;"/>
+            <col style="width: 6em;"/>
+            <col style="width: 5em;"/>
+            <col/>
+          </colgroup>
           <thead>
             <tr>
               <th>Make</th>
               <th>Price</th>
               <th>Year</th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
@@ -116,11 +123,13 @@
               <td>BMW X6</td>
               <td>$75,000</td>
               <td>2013</td>
+              <td>The first generation (E71) was released for sale in April 2008 for the 2008 model year, while the second-generation X6 (F16) was launched at the Paris Motor Show in 2014.</td>
             </tr>
             <tr>
               <td>Mercedes-Benz E350</td>
               <td>$52,700</td>
               <td>2014</td>
+              <td>In November 2020, the W213 E-Class was awarded the 2021 Motor Trend Car of the Year award, a first for Mercedes-Benz.</td>
             </tr>
           </tbody>
         </table>
@@ -212,7 +221,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">GitHub</a></small></li>
-            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-1.9.1.min.css">Download</a></small></li>
+            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-1.9.2.min.css">Download</a></small></li>
             <li><small><a href="https://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
@@ -234,7 +243,7 @@
         </nav>
         <nav>
           <ul>
-            <li>1.9.1</li>
+            <li>1.9.2</li>
           </ul>
         </nav>
       </footer>
