#366: Refactor form elements margin styles.

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         <form>
           <label>Add funds:</label><input type="text" size="10" placeholder="e.g. $10"/><button type="submit">Pay</button>
         </form>
+        <p>Vertically, it looks like a paragraph.</p>
         <h2>Tables</h2>
         <p>
           A simple table would look like this:
