--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 &lt;html&gt;
   &lt;head&gt;
     &lt;link rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-1.9.3.min.css"/&gt;
+      href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-1.9.4.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -99,6 +99,7 @@
         <form>
           <label>Add funds:</label><input type="text" size="10" placeholder="e.g. $10"/><button type="submit">Pay</button>
         </form>
+        <p>Vertically, it looks like a paragraph.</p>
         <h2>Tables</h2>
         <p>
           A simple table would look like this:
@@ -221,7 +222,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">GitHub</a></small></li>
-            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-1.9.3.min.css">Download</a></small></li>
+            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-1.9.4.min.css">Download</a></small></li>
             <li><small><a href="https://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
@@ -243,7 +244,7 @@
         </nav>
         <nav>
           <ul>
-            <li>1.9.3</li>
+            <li>1.9.4</li>
           </ul>
         </nav>
       </footer>
